# internal/plumbing/operations/get_account_responses.go
@@ -52,7 +52,7 @@ GetAccountOK describes a response with status code 200, with default header valu
 OK
 */
 type GetAccountOK struct {
-	Payload []*models.AccountMembership
+	Payload *models.AccountMembership
 }
 
 // IsSuccess returns true when this get account o k response has a 2xx status code
@@ -93,14 +93,16 @@ func (o *GetAccountOK) String() string {
 	return fmt.Sprintf("[GET /accounts/{account_id}][%d] getAccountOK  %+v", 200, o.Payload)
 }
 
-func (o *GetAccountOK) GetPayload() []*models.AccountMembership {
+func (o *GetAccountOK) GetPayload() *models.AccountMembership {
 	return o.Payload
 }
 
 func (o *GetAccountOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
 
+	o.Payload = new(models.AccountMembership)
+
 	// response payload
-	if err := consumer.Consume(response.Body(), &o.Payload); err != nil && err != io.EOF {
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
 		return err
 	}
 
