# swagger.yml
@@ -2001,9 +2001,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/accountMembership'
+            $ref: '#/definitions/accountMembership'
         default:
           $ref: '#/responses/error'
     put:
@@ -3699,8 +3697,6 @@ definitions:
       billing_name:
         type: string
       billing_email:
-        type: string
-      billing_details:
         type: string
       billing_period:
         type: string
